# ComfyUI-Moondream-Gaze-Detection

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish-comfyui-registry.yml
examples/: Moondream Gaze Detection Image.json  Moondream Gaze Detection Video.json
modules/inferencer/: moondream_inferencer.py  pyvips_dll_handler.py
