[project]
name = "comfyui-moondream-gaze-detection"
description = "Moondream's gaze detection feature node from [ComfyUI-Moondream-Gaze-Detection](https://github.com/jhj0517/ComfyUI-Moondream-Gaze-Detection)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["matplotlib==3.10.0", "pyvips==2.2.3", "accelerate>=0.32.1"]

[project.urls]
Repository = "https://github.com/jhj0517/ComfyUI-Moondream-Gaze-Detection.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jhj0517"
DisplayName = "ComfyUI-Moondream-Gaze-Detection"
Icon = ""
