[project]
name = "comfyui-moondream-gaze-detection"
description = "Moondream's gaze detection feature wrapper node."
version = "1.0.4"
license = {file = "LICENSE"}
dependencies = ["matplotlib==3.10.0", "pyvips==2.2.3", "accelerate>=0.32.1", "opencv-python"]

[project.urls]
Repository = "https://github.com/jhj0517/ComfyUI-Moondream-Gaze-Detection.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jhj0517"
DisplayName = "ComfyUI-Moondream-Gaze-Detection"
Icon = ""
